# starlark-parser

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  test0.out
include/: debug.h  expr.h  statements.h  types.h  utils.h
scripts/: temp.out
src/: debug.c  debug.cpp  expr.cpp  gen_tokenid2name.py  lexer.l  main.c  main_lexer.c  main_lexer.cpp  main_parser.cpp  parser.y  statements.cpp  types.cpp  utils.c  utils.cpp
tests/: TEST_PROGRAM  main_test.cpp  test.out
tests/expected_lexer_output/: 1.txt
tests/expected_parser_output/: 2.txt  4.txt  6.txt  7.txt
tests/programs/: 2.bzl  3.bzl  test2.bzl  test2.out  test3.bzl  test4.bzl
